fix spacing mobile icon alert

--- a/component/alert/css/alert.css
+++ b/component/alert/css/alert.css
@@ -70,4 +70,8 @@
     justify-content: flex-start !important;
   }
 
+  .icon-container {
+    padding: 0 0 0 1rem;
+  }
+
 }
